fix erase, welcome panel, collapse color settings (#22)

--- a/docs/index.css
+++ b/docs/index.css
@@ -1,6 +1,21 @@
-/* NOTE: ALL SVG STYLING SHOULD BE DONE IN JS SO THAT IMAGE EXPORT CONTAINS ALL STYLING ATTRIBUTES */
+/* NOTE: ALL SVG STYLING SHOULD BE DONE IN JS SO THAT IMAGE EXPORT CONTAINS
+/* ALL STYLING ATTRIBUTES */
+
+@font-face {
+  font-family: "Merriweather";
+  src: url(Merriweather.ttf) format("truetype");
+}
 
 html, body {
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+    font-family: "Merriweather", serif;
+    box-sizing: border-box;
+}
+
+#hexaggon {
     margin: 0;
     padding: 0;
     background-image: url("tiledspace.jpg");
@@ -10,20 +25,50 @@ html, body {
     width: 100vw;
 }
 
+#welcomeContainer {
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    top: 0;
+}
+#welcome {
+    background: white;
+    opacity: 80%;
+    border-radius: 10px;
+    padding: 40px;
+}
+#welcome > :first-child {
+    margin-top: auto;
+}
+#welcome > :last-child {
+    margin-bottom: auto;
+}
+
+.h1 {
+    font-size: 70px;
+}
+
+.normaltext {
+    font-size: 30px;
+}
+
 .brushcursor {
-    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='font-size:24px;'><text y='50%'>🖌</text></svg>") 0 16,auto;
+    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='font-size:24px;'><text y='50%'>🖌</text></svg>") 0 16,auto;
 }
 
 .fillcursor {
-    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='font-size:24px;'><text y='50%'>🪣</text></svg>") 16 0,auto;
+    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='font-size:24px;'><text y='50%'>🪣</text></svg>") 16 0,auto;
 }
 
 .eyedroppercursor {
-    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='font-size:24px;'><text y='50%'>💧</text></svg>") 20 0,auto;
+    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='font-size:24px;'><text y='50%'>💧</text></svg>") 20 0,auto;
 }
 
 .erasercursor {
-    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='font-size:24px;'><text y='50%'>🧻</text></svg>") 0 0,auto;
+    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='font-size:24px;'><text y='50%'>🧻</text></svg>") 0 0,auto;
 }
 
 .movecursor {
@@ -48,6 +93,9 @@ html, body {
 .btn > label {
     cursor: pointer;
 }
+.hexagon-btn > svg {
+    height: 21px;
+}
 
 .toolbar {
     padding: 1rem;
@@ -57,6 +105,10 @@ html, body {
 
 .bottom {
     bottom: 0;
+}
+
+.frosted {
+    filter: blur(5px);
 }
 
 .control-panel {
@@ -78,8 +130,8 @@ html, body {
 }
 
 #textFontSize {
-    width: 75px;
-    height: 50px;
+    width: 60px;
+    height: 35px;
     paadding: 0;
     margin: 0;
     font-size: 20px;
@@ -117,11 +169,11 @@ html, body {
 }
 
 .primaryselected {
-    border: 5px solid black;
+    border: 3px solid black;
 }
 
 .secondaryselected {
-    border: 5px dotted black;
+    border: 3px dotted black;
 }
 
 .border-box {
